# Genetic_Algorithm

./: Cargo.toml
src/: export_of_image.rs  genetic_algorithm.rs  helpers_functions.rs  main.rs
